test-projects - refactoring cont. - "selenium" and "surefire" projects moved to "reporting" group.
git-svn-id: http://maven-play-plugin.googlecode.com/svn/trunk/test-projects@11838 9c2ad861-7886-cb7c-dcd7-2b8d41cd5de0