@@ -25,23 +25,23 @@ limitations under the License.
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.google.code.maven-play-plugin.test-projects</groupId>
-    <artifactId>selenium</artifactId>
+    <groupId>com.google.code.maven-play-plugin.test-projects.reporting</groupId>
+    <artifactId>surefire</artifactId>
     <version>1.0.0-beta8-SNAPSHOT</version>
     <packaging>play</packaging>
 
-    <name>Play! Framework Maven Test Projects : Selenium Integration Tests</name>
-    <description>Play! Framework Maven Test Projects : Selenium Integration Tests</description>
-    <url>https://maven-play-plugin.googlecode.com/svn/trunk/test-projects/selenium/</url>
+    <name>Play! Framework Maven Test Projects : Reporting : Unit and Functional Tests</name>
+    <description>Play! Framework Maven Test Projects : Reporting : Unit and Functional Tests</description>
+    <url>https://maven-play-plugin.googlecode.com/svn/trunk/test-projects/reporting/surefire/</url>
 
     <scm>
-        <connection>scm:svn:http://maven-play-plugin.googlecode.com/svn/trunk/test-projects/selenium/</connection>
-        <developerConnection>scm:svn:https://maven-play-plugin.googlecode.com/svn/trunk/test-projects/selenium/</developerConnection>
-        <url>http://maven-play-plugin.googlecode.com/svn/trunk/test-projects/selenium/</url>
+        <connection>scm:svn:http://maven-play-plugin.googlecode.com/svn/trunk/test-projects/reporting/surefire/</connection>
+        <developerConnection>scm:svn:https://maven-play-plugin.googlecode.com/svn/trunk/test-projects/reporting/surefire/</developerConnection>
+        <url>http://maven-play-plugin.googlecode.com/svn/trunk/test-projects/reporting/surefire/</url>
     </scm>
 
     <properties>
-        <selenium.test.trace>true</selenium.test.trace>
+        <play.seleniumSkip>true</play.seleniumSkip>
     </properties>
 
     <build>
@@ -56,22 +56,7 @@ limitations under the License.
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <includes>
-                        <include>**/ApplicationSeleniumTest.java</include>
-                        <!--<include>**/CacheEntrySeleniumTest.java</include>-->
-                        <!--<include>**/EqualsNotEqualsSeleniumTest.java</include>-->
-                        <!--<include>**/SelectedSeleniumTest.java</include>-->
-                        <!--<include>**/TextLikeSeleniumTest.java</include>-->
-                        <!--<include>**/*SeleniumTest.java</include>-->
-                    </includes>
+                    <!--<debugForkedProcess>-Xmx1024m -XX:MaxPermSize=256m -Xdebug -Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=y</debugForkedProcess>-->
                 </configuration>
             </plugin>
 
@@ -104,7 +89,7 @@ limitations under the License.
                 <reportSets>
                     <reportSet>
                         <reports>
-                            <report>failsafe-report-only</report>
+                            <report>report-only</report>
                         </reports>
                     </reportSet>
                 </reportSets>
